[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Enemies/Witch/wizzard_f_idle_anim_f0.png" type="Texture" id=1]
[ext_resource path="res://Assets/Enemies/Witch/wizzard_f_idle_anim_f1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Enemies/Witch/wizzard_f_idle_anim_f2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Enemies/Witch/wizzard_f_idle_anim_f3.png" type="Texture" id=4]
[ext_resource path="res://Assets/Enemies/Witch/wizzard_f_run_anim_f0.png" type="Texture" id=5]
[ext_resource path="res://Assets/Enemies/Witch/wizzard_f_run_anim_f3.png" type="Texture" id=6]
[ext_resource path="res://Assets/Enemies/Witch/wizzard_f_run_anim_f1.png" type="Texture" id=7]
[ext_resource path="res://Assets/Enemies/Witch/wizzard_f_run_anim_f2.png" type="Texture" id=8]
[ext_resource path="res://Assets/Enemies/Witch/wizzard_f_hit_anim_f0.png" type="Texture" id=9]
[ext_resource path="res://Script/Enemies/Witch.gd" type="Script" id=10]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 6 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.5, 5.25 )

[node name="Witch" type="KinematicBody2D"]
z_index = 4
script = ExtResource( 10 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "Run"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5.25 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AttackStart" type="Timer" parent="."]
one_shot = true

[node name="AttackStop" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="AttackStart" to="." method="_on_AttackStart_timeout"]
[connection signal="timeout" from="AttackStop" to="." method="_on_AttackStop_timeout"]
